set to generic font to see if this fixes button issue on mobile

--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ h3 {
 button {
     width: 42px;
     height: 42px;
-    font-family: Timer;
+    font-family: Verdana;
     font-size: 18px;
     color: #9AABD8;
     border: 2px solid #9AABD8;
